1.34/06-postgresql/manifests/pgadmin.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: pgadmin-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
  selector:
    app: pgadmin
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:9.11
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
        resources:
          requests:
            memory: "100Mi"
            cpu: "0.2"
          limits:
            memory: "800Mi"
            cpu: "0.8"
        volumeMounts:
          - mountPath: /var/lib/pgadmin
            name: state
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: pgadmin-pvc
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: http
    - name: eg
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "pg.kryukov.lan"
  rules:
    - backendRefs:
        - kind: Service
          name: pgadmin-svc
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
